fix(footer): now scales properly with windows body - fixed issue for horizontal scroll during page-load

--- a/src/UI/UIComponents/FOOTER/footer.module.scss
+++ b/src/UI/UIComponents/FOOTER/footer.module.scss
@@ -1,17 +1,25 @@
 // Footer
 .footer {
-  position: absolute;
-  left: 0;
   width: 100%;
 
-  background-color: var(--c-grey-100);
-
   display: flex;
-
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 
   .navContent {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+
+  .backgroundColor {
+    position: absolute;
+
+    height: 310px;
+    width: var(--pageWidhtNoScrollBar);
+    z-index: 1;
+    background-color: var(--c-grey-100);
   }
 }
 
